# RUST-LEGACY-INTO-MODERN-RUST-MIGRATION

./: Cargo.toml  README.md  modernizer_rules.json
.github/workflows/: release.yml
src/: main.rs
tools/: rust_modernizer.py
