[package]
name = "rust_modernizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# ----------------------------------------
# 1. 자동 규칙 업데이트를 위한 크롤링/분석
# ----------------------------------------
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.17"
regex = "1"

# ----------------------------------------
# 2. 필수 CLI 및 에러 처리
# ----------------------------------------
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0" 

# ----------------------------------------
# 3. AST 처리 및 코드 변환
# ----------------------------------------
# 'visit-mut' 기능이 명시되어 있어 AST 수정 가능
syn = { version = "2.0", features = ["full", "visit-mut"] } 
prettyplease = "0.2.1"

# ----------------------------------------
# 4. 데이터 기반 규칙 처리 (누락된 부분)
# ----------------------------------------
# JSON 규칙 파일 처리를 위해 serde와 serde_json 추가
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
